<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?homeAsUpIndicator"
            android:theme="@style/toolbarTheme">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_view"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/logo" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/normal_padding_size">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/toolbar_text_size"
                            android:textColor="@color/textColor"
                            android:textStyle="bold"
                            android:text="@string/google_africa_text"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/toolbar_text_size"
                            android:textColor="@color/textColor"
                            android:textStyle="bold"
                            android:text="@string/developer_scholarship"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/project_submission_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title_size"
            android:textColor="@color/submitColor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@id/toolbar"
            android:text="@string/project_submission"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/submitColor"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/project_submission_text"
            android:layout_marginTop="3dp"
            android:id="@+id/view"/>

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/normal_padding_size"
            android:layout_marginLeft="@dimen/normal_padding_size"
            android:id="@+id/linear_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_normal_size"
                    android:hint="@string/firstNameHint"
                    android:layout_marginRight="@dimen/normal_padding_size"
                    android:padding="@dimen/normal_padding_size"
                    android:background="@drawable/edit_text_bg"/>

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_normal_size"
                    android:padding="@dimen/normal_padding_size"
                    android:hint="@string/lastNameHint"
                    android:background="@drawable/edit_text_bg"/>

            </LinearLayout>

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal_size"
                android:padding="@dimen/normal_padding_size"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="40dp"/>

            <EditText
                android:id="@+id/project_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal_size"
                android:padding="@dimen/normal_padding_size"
                android:layout_marginTop="40dp"
                android:hint="@string/projectLinkGithubHint"
                android:background="@drawable/edit_text_bg"/>

        </LinearLayout>
        
        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="@dimen/text_normal_size"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:text="@string/submitText"
            android:background="@drawable/submit_btn_bg"
            android:layout_below="@id/linear_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:padding="5dp"/>

    </RelativeLayout>



</layout>